<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary1"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:text=" SHMS Login"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#ffffff">
    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="#ffffff"
            android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/input_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_email_24" />

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@null"
                    android:hint="@string/prompt_email"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorPrimary1"
                    android:textColorHint="#808080"
                    android:textSize="18dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="41dp"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textColor="@color/colorPrimary1"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:background="#ffffff"
                app:layout_constraintBottom_toTopOf="@+id/layout_email"
                app:layout_constraintStart_toStartOf="@+id/layout_email"
                app:layout_constraintTop_toTopOf="@+id/layout_email"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/input_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_baseline_lock_24" />

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@null"
                        android:hint="@string/prompt_password"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:textColor="@color/colorPrimary1"
                        android:paddingEnd="10dp"
                        android:textColorHint="#808080"
                        android:textSize="18dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="41dp"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:text="@string/password"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:background="#ffffff"
                    android:textColor="@color/colorPrimary1"
                    app:layout_constraintBottom_toTopOf="@+id/layout_password"
                    app:layout_constraintStart_toStartOf="@+id/layout_password"
                    app:layout_constraintTop_toTopOf="@+id/layout_password"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/invalid_email_or_password"
                android:layout_width="1dp"
                android:layout_height="17dp"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorAccent1"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text=""
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@drawable/button_gradient"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forget Password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/create_new_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text=" Create a new account"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>



        </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
